# smart_pokedex

./: .gitignore  Dockerfile  README.md  changelog.md  env_template  logging.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cicd.yml
smart_pokedex/cli/: cli.py
smart_pokedex/model/: __init__.py  classifier.py  data_loader.py  image_objects.py  predictor.py
smart_pokedex/model/resources/: metadata.json
smart_pokedex/utils/: image_loader.py  logger.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/cli/: test_cli.py
tests/integration/utils/: test_image_loader.py
tests/unit/cli/: test_cli.py
tests/unit/model/: test_classifier.py  test_data_loader.py  test_image_objects.py
tests/unit/utils/: test_image_loader.py  test_logger.py
