[tool.poetry]
name = "smart_pokedex"
version = "0.0.0"
description = "A CLI tool that identifies Pokemon from images and provides basic information using PokeAPI."
authors = ["Maciej Krakowiak"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
tensorflow = "^2.18.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
tensorflow = {extras = ["and-cuda"], version = "^2.18.0"}
scikit-learn = "^1.5.2"
graphviz = "^0.20.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
pytest = "^8.3.3"
tox = "^4.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
